--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer">
   <small>
     THE FISHERY
   </small>
@@ -9,4 +9,4 @@
       
     </ul>
   
-</footer>
+</footer> 
