--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -1,14 +1,14 @@
-footer{
+
+
+  footer {
   clear:both !important;
   width:100%;
-  position: absolute;
+  position: relative;
   height: 35px;
-  padding: 5px;
   color:#200f08 ;
   background:#1b1f20;
-  margin-top: 10px;
-  padding-top: 5px;
-  bottom: 0;
+  margin-top: 45px;
+  
   
   /*Opacity*/
   filter:alpha(opacity=75); /* msie */  
@@ -26,12 +26,15 @@ footer{
     li {
       float: left;
       margin-left: 10px;
+      display: block;
     }
   }
   
 
  
 }
+
+
 
 nav { 
   width:100%;
