--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,16 @@
        
 
 
-            <div class="span10">
+            <div class="span7">
               <%= render 'layouts/messages' %>
               <div class="hero-unit">
               <%= yield %>
+              </div>
+            </div>
+
+            <div class="span3">
+              <div class="rbar">
+              <h1> heading </h1>
               </div>
             </div>
 
