--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,12 @@
               <div class="rbar">
               <h1> heading </h1>
               </div>
+
+              <div class="row-fluid">
+                <div class="span1">1 </div>
+                <div class="span1">2 </div>
+                <div class="span1">3 </div>
+              </div>
             </div>
 
          
