--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -9,7 +9,7 @@
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
-  footer {
+footer {
   clear:both !important;
   width:100%;
   position: relative;
@@ -131,6 +131,19 @@ border-right:1px solid rgba(0,0,0,0);
 border-left:1px solid rgba(0,0,0,0);
 }
 
-
-
- 
+.devise-login {
+  width:250px;
+  height:500px;
+  position:absolute;
+  left:50%;
+  top:50%;
+  margin:-300px 0 0 -150px;
+  background-color: #eee;
+  padding: 20px;
+  -webkit-border-radius: 0 0 6px 6px;
+  -moz-border-radius: 0 0 6px 6px;
+  border-radius: 0 0 6px 6px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+}
